--- a/ecoTourisme.html
+++ b/ecoTourisme.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Asta Astou" />
 
-<meta name="date" content="2024-09-04" />
+<meta name="date" content="2024-09-05" />
 
 <title>ecotourisme</title>
 
@@ -352,13 +352,14 @@ display: none;
 
 <h1 class="title toc-ignore">ecotourisme</h1>
 <h4 class="author">Asta Astou</h4>
-<h4 class="date">2024-09-04</h4>
+<h4 class="date">2024-09-05</h4>
 
 </div>
 
 
 <div id="problèmatique-de-recherche" class="section level2">
 <h2>Problèmatique de recherche</h2>
+<p>Contexte Objtectif Hypothèses Plan</p>
 </div>
 
 
